# gbchess

./: .clang-format  .clangd  .gitignore  AGENTS.md  Cargo.toml  INCREMENTAL_NNUE_DESIGN.md  MIGRATION_SUMMARY.md  MakeMove.md  Makefile  QSTT.md  README.md  RUST_MIGRATION_PLAN.md  SEARCH_OPTIMIZATION_ANALYSIS.md  USING_PERFT.md  USING_PUZZLES.md  USING_SPRT.md  add_fixed_puzzle.sh  analyze.awk  analyze.sh  blunder.pgn  broken  check-arch.sh  chess.lldbinit  chessfun.sh  common.h  config.json  count-eco-openings.awk  dairy.md  dead-code.py  debug.h  elo.h  elo_test.cpp  eval.cpp  eval.h  eval_tables.h  eval_test.cpp  fen.cpp  fen.h  fen2svg  fen2svg.sh  (+57 more)
.githooks/: pre-push
lichess/: PUZZLES.md  ci_mate123_4000.csv  ci_mate45_100.csv  ci_nonmate_100.csv  fixed_puzzles.csv
rust/: README.md  hello.rs
rust/moves/: Cargo.toml
rust/moves/src/: lib.rs  main.rs  moves.rs
rust/moves_gen/: Cargo.toml
rust/moves_gen/src/: lib.rs  main.rs  main_simple.rs  moves_gen.rs
rust/perft/: Cargo.toml
rust/perft/src/: main.rs  perft.rs
src/: ARCHITECTURE.md  README.md  castling_info.h  elo.h  eval.cpp  eval_test.cpp  fen.cpp  hash.cpp  hash.h  hash_test.cpp  magic_gen.h  magic_test.cpp  moves.cpp  moves.h  moves_gen.cpp  moves_gen.h  moves_gen_test.cpp  moves_table.cpp  moves_table.h  moves_table_test.cpp  moves_test.cpp  nnue_stats.h  options.h  perft.cpp  perft_core.cpp  perft_core.h  perft_simple.cpp  perft_test.cpp  random.h  search.cpp  search.h  search_test.cpp  square_set.cpp  square_set.h  square_set_test.cpp  sse2.h  sse2emul.h  uci.cpp  uci.h  uint128_t.h
test/: check-uci.sh  gen_ci_puzzles.sh  perft_diverge.py  sprt.sh  sprt_summary.py  uci-avoid-opponent-draw.in  uci-avoid-self-draw.in  uci-basic-time-control.in  uci-caching-nodes-exceeded.in  uci-kiwipete.in  uci-movetime-limit.in  uci-newgame-clears-caches.in  uci-nodes-reset.in  uci-repeat-go.in  uci-repetition-caused-blundering.in  uci-rook-blunder.in  ut3.in  (+9 more)
(+124 files in other folders)
