[package]
name = "moves"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fen = { path = "../fen" }
square_set = { path = "../square_set" }
magic = { path = "../magic" }
moves_table = { path = "../moves_table" }

[dev-dependencies]
criterion.workspace = true

[[bin]]
name = "moves-test"
path = "src/main.rs"
