[package]
name = "moves_gen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
fen = { path = "../fen" }
square_set = { path = "../square_set" }
moves_table = { path = "../moves_table" }
moves = { path = "../moves" }
magic = { path = "../magic" }

[[bin]]
name = "moves_gen-test"
path = "src/main.rs"
